# omegalax

./: README.md  _sbatch_verify_fix_slowdown.sh  pyproject.toml
omegalax/: __init__.py  attention.py  export.py  model.py  registry.py  training.py
omegalax/data/: __init__.py  collator_qwen3.py  collators.py  grain_pipeline.py  jsonl.py  qwen3_encoding.py
omegalax/distributed/: __init__.py  mesh.py
omegalax/models/: __init__.py  params_utils.py  shard_config.py  sharding_runtime.py
omegalax/models/qwen3/: __init__.py  attention.py  cache.py  config.py  loader.py  model.py  norms.py  params.py  registry.py  rope.py  sharding.py  utils.py
omegalax/models/qwen3_5/: __init__.py  attention.py  config.py  (+8 more)
omegalax/text/: __init__.py  api.py
omegalax/trainers/: __init__.py  checkpoint_utils.py  loss.py  lr_schedule.py  optim.py  perf.py  schedule.py  text.py  vlm.py
omegalax/vlm/: __init__.py  api.py
scripts/: build_sft_chunk_index.py  compile_sft_dataset.py  export_qwen3_dense_to_hf.py  export_to_hf.py  train_smoke.py  train_text.py  train_text_pretrain.py  train_text_sft.py  train_vlm_pretrain.py  train_vlm_sft.py
tests/: logits_assert.py  real_weights.py  test_data_mixing.py  test_e2e_smoke.py  test_export_qwen3_dense.py  test_export_roundtrip_smoke.py  test_fix_slowdown_ports.py  test_grain_pipeline.py  test_hf_dtype_alignment.py  test_perf.py  test_qwen3_0_6b.py  test_qwen3_30b_a3b.py  test_qwen3_5_0_8b.py  test_qwen3_5_397b_a17b.py  test_qwen3_5_smoke.py  test_qwen3_all_models.py  test_qwen3_configs.py  test_qwen3_dense_smoke.py  test_qwen3_modules.py  test_qwen3_moe_smoke.py  test_qwen3_vl_2b.py  test_qwen3_vl_moe_smoke.py  test_qwen3_vl_smoke.py  test_rope_dtype.py  test_sft_collators.py  test_sft_training.py  test_smoke.py  test_train_text_loop.py  test_train_vlm_loop.py
(+15 files in other folders)
