[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omegalax"
version = "0.1.0"
description = "JAX-based VLM training codebase scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "absl-py",
  "array-record",
  "etils",
  "flax>0.12.0",
  "jax[cuda12]",
  "jaxtyping",
  "optax",
  "orbax-checkpoint",
  "Pillow",
  "safetensors",
  "transformers",
  "huggingface-hub",
  "tensorboardx>=2.6.4",
  "grain>=0.2.16",
]

[project.optional-dependencies]
torch-tests = [
  "torch==2.10.* ; platform_system == \"Linux\"",
]

[tool.hatch.build.targets.wheel]
packages = ["omegalax"]

[dependency-groups]
dev = [
    "setuptools<81",
    "tensorboard>=2.20.0",
    "xprof>=2.22.0",
]
